注册报错问题

--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -156,7 +156,7 @@
 										events.infoChanged();
 										if(data.RspData.ispw == 1) {
 											//跳转到主界面
-											events.openNewWindowWithData('../index/index.html', '');
+											events.openNewWindow('../index/index.html');
 										} else {
 											//跳转到修改密码界面
 											var temp;
