--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -14,13 +14,18 @@
 			.mui-pull-right {
 				max-width: 70%;
 			}
-
+			
 			.head-portrait {
 				min-width: 4rem;
 				min-height: 4rem;
 				max-width: 4rem;
 				max-height: 4rem;
 				border-radius: 50%;
+			}
+			
+			.head-message {
+				height: 4rem;
+				padding-top: 1.2rem;
 			}
 		</style>
 	</head>
@@ -37,7 +42,7 @@
 					<li class="mui-table-view-cell">
 						<a href="#picture">
 							<img class="mui-media-object mui-pull-right head-portrait" id="img" src="../../image/utils/default_personalimage.png">
-							<div class="mui-pull-left ">
+							<div class="mui-pull-left head-message" style="">
 								头像
 							</div>
 						</a>
@@ -134,7 +139,7 @@
 		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
 		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
 		<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
-		<script type="text/javascript" src="../../js/utils/compress.js" ></script>
+		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 		<script src="../../js/mine/account-info.js"></script>
 
 	</body>
