--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -105,7 +105,7 @@
 
 								} else { //无密码
 									events.fireToPageNone('../register/modify_password.html', 'settingPW');
-									events.openNewWindow('../register/modify_password.html');
+									events.openNewWindowWithData('modify_password.html', '');
 								}
 
 								break;
