--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -114,6 +114,15 @@
 			.mui-table .oa-icon-star-filled {
 				color: #f14e41;
 			}
+			
+			.mui-table-view {
+				background: #F2F3F5;
+			}
+			
+			.mui-table-view-cell {
+				background: white;
+				margin-bottom: 5px;
+			}
 		</style>
 	</head>
 
