--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
@@ -9,6 +9,18 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />
+		<style>
+			.mui-table-view {
+				background: #F2F3F5;
+			}
+			
+			.mui-table-view li {
+				background: white;
+				margin-bottom: 5px;
+				border-bottom: #e4e4e4 solid 1px;
+				padding: 3px 0 3px 0;
+			}
+		</style>
 	</head>
 
 	<body>
