作业和其他输入逻辑

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -227,7 +227,7 @@
 						textView.blur();
 						CloudFileUtil.files = [];
 						events.clearChild(document.getElementById('pictures'));
-						events.fireToPageNone('homework-tea-sub.html', 'homeworkDone');
+						events.fireToPageNone('homework-tea.html', 'homeworkDone');
 						
 						events.openNewWindowWithData('homework-commented.html', jQuery.extend({}, homeworkModel, { HomeworkResultId: data.RspData.HomeworkResultId, workType: 1 }));
 					} else {
