--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -30,8 +30,8 @@
 			<a id="submitBtn" class="mui-pull-right header-publish">提交</a>
 		</header>
 		<!--content-->
-		<div class="mui-content">
-			
+		<div class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
 			<!--表单-->
 			<form class="mui-input-group">
 				<div class="mui-input-row">
@@ -65,6 +65,7 @@
 				<p class="extra-info"><span class="mui-icon mui-icon-info"></span>开启在线提交后，学生需提交文字反馈</p>
 				<div id="pictures" class="img-container imgs-extras"></div>
 			</form>
+			</div>
 		</div>
 		<div id="play" class="rp">
 			<div id="ptime" class="ptime">00:00:00/00:00:00</div><br/>
