--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<!--申请入群弹出框-->
-		<div id="chose-roles" class="mui-popover">
+		<div id="chose-roles" class="mui-popover center-popover">
 			<form class="mui-input-group">
 				<fieldset id="">
 					<legend>选择身份:</legend>
