--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -13,6 +13,7 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<!--alibaba字库-->
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+			<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<!--本页面应有样式-->
 		<link href="../../css/homework/homework.css" rel="stylesheet" />
 	</head>
@@ -29,12 +30,43 @@
 		   	<!--相机按钮-->
 		    <a id="icon-camero" class="mui-icon iconfont icon-xiangji  mui-pull-right display-none"></a>
 		</header>
-		
+			<div id="popover" class="mui-popover">
+			<ul class=" mui-table-view">
+				<li id="err" class="mui-table-view-cell">
+					<a class="mui-icon iconfont icon-shubendisc" href="">错题本</a>
+				</li>
+				<li id="record" class="mui-table-view-cell">
+					<a class="mui-icon iconfont icon-shezhi1" href="">作业记录</a>
+				</li>
+			</ul>
+		</div>
+		<div class="mui-content">
+		<!--	<div id="slider" class="mui-slider mui-fullscreen">-->
+				<!--班级选择状态条-->
+				<div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div id="scroll-class" class="mui-scroll tabs-classes">
+
+					</div>
+				</div>
+			<!--</div>-->
+			<!--<img id="tempDetail" src="../../image/homework/other.png" />-->
+		</div>
+		<!--下拉刷新容器-->
+		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
+		<div class="mui-scroll">
+			<!--数据列表-->
+			<ul id="list-container" class="mui-table-view">
+
+			</ul>
+		</div>
+		<a id="iconPublish" class="mui-icon iconfont icon-tianjia"></a>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/switch-mine.js"></script>
 		<!--公共事件方法库-->
 		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/publicHomeworkProtocol.js"></script>
 		<script src="../../js/homework/homework.js"></script>
 		
 	</body>
