--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -395,48 +395,46 @@
 			window.addEventListener('refreshZonep', function(data) {
 				var tempData = data.detail;
 				console.log(JSON.stringify(tempData));
-				if(tempData.flag=='评论'){
-				var div = document.createElement("div");
-				var index = zonepArray[tempIndex].Comments.length
-				div.id = 'replyComment' + tempIndex + '-' + index + '-' + '评论'
-				div.className = 'mui-media-body replyComment'
-				div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name ">' + personalunick + '</font>'+
-				'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font>'
-				var commentList =  document.getElementById("commentList"+tempData.tempIndex);
-				commentList.appendChild(div);
-				}else if(tempData.flag=='评论回复'){
-					var indexArr = tempIndex.split('-');
-						var id = indexArr[0];
-						var commentId = indexArr[1];
-						var replyId = indexArr[2];
-
-						var tempModel = zonepArray[id].Comments[commentId];
-						var replyUserId;
-						var ReplyIdName;
-						if(replyId == '评论') {
-							replyUserId = tempModel.UserId
-							ReplyIdName = tempModel.UserIdName
-						} else {
-							replyUserId = tempModel.Replys[replyId].UserId;
-							ReplyIdName = tempModel.Replys[replyId].UserIdName;
-						}
-						var commentList =  document.getElementById("commentList"+id);
+				if(tempData.flag == '评论') {
 					var div = document.createElement("div");
-				div.id = 'replyComment' + id + '-' + commentId + '-' + replyId;
-				div.className = 'mui-media-body replyComment';
-				div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name">' + personalunick + '</font>'+
-				'<font class="common-font-family-Regular" style = "font-size:14px">回复</font>'+
-				'<font class="common-font-family-Regular dynamic-comment-name">' + ReplyIdName + '</font>'+
-				'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font></div>'
-				var tempDiv = document.getElementById('replyComment' + id + '-' + commentId + '-' + '评论')
-				tempDiv.appendChild(div)
+					var index = zonepArray[tempIndex].Comments.length
+					div.id = 'replyComment' + tempIndex + '-' + index + '-' + '评论'
+					div.className = 'mui-media-body replyComment'
+					div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name ">' + personalunick + '</font>' +
+						'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font>'
+					var commentList = document.getElementById("commentList" + tempData.tempIndex);
+					commentList.appendChild(div);
+				} else if(tempData.flag == '评论回复') {
+					var indexArr = tempIndex.split('-');
+					var id = indexArr[0];
+					var commentId = indexArr[1];
+					var replyId = indexArr[2];
 
-				}else{
+					var tempModel = zonepArray[id].Comments[commentId];
+					var replyUserId;
+					var ReplyIdName;
+					if(replyId == '评论') {
+						replyUserId = tempModel.UserId
+						ReplyIdName = tempModel.UserIdName
+					} else {
+						replyUserId = tempModel.Replys[replyId].UserId;
+						ReplyIdName = tempModel.Replys[replyId].UserIdName;
+					}
+					var commentList = document.getElementById("commentList" + id);
+					var div = document.createElement("div");
+					div.id = 'replyComment' + id + '-' + commentId + '-' + replyId;
+					div.className = 'mui-media-body replyComment';
+					div.innerHTML = '<font class="common-font-family-Regular dynamic-comment-name">' + personalunick + '</font>' +
+						'<font class="common-font-family-Regular" style = "font-size:14px">回复</font>' +
+						'<font class="common-font-family-Regular dynamic-comment-name">' + ReplyIdName + '</font>' +
+						'<font class="common-font-family-Regular" style = "font-size:14px">：' + tempData.content + '</font></div>'
+					var tempDiv = document.getElementById('replyComment' + id + '-' + commentId + '-' + '评论')
+					tempDiv.appendChild(div)
+
+				} else {
 					requestData(comData)
 				}
-				
 
-				
 			})
 
 			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
@@ -500,7 +498,7 @@
 				events.openNewWindowWithData('space-detail.html', zonepArray[index])
 				click.push(id);
 				click = [];
-			}) 
+			})
 			mui('.mui-table-view').on('tap', '.show2', function() {
 
 				var toast = '';
@@ -694,10 +692,15 @@
 			//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
 			//判断img是否为null，或者空
 			var tempModel = zonepArray[index];
-			tempModel.uimg = updateHeadImg(tempModel.uimg)
 
 			var personalImage = tempModel.uimg;
-			var personalName = events.shortForString(tempModel.unick, 15);
+			var personalName;
+			if(tempModel.ugname) {
+				personalName = events.shortForString(tempModel.ugname, 15);
+			} else {
+				personalName = events.shortForString(tempModel.unick, 15);
+			}
+
 			var time = modifyTimeFormat(tempModel.PublishDate);
 			var contentText = tempModel.MsgContent;
 			InfoList.push(personalImage);
@@ -844,34 +847,7 @@
 				console.log('通过群ID获取群的正常用户_PostGusers:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 				if(data.RspCode == 0) {
 					datasource = data.RspData;
-					//			群用户去重
-					var tempUtidArr = [];
-					var tempUserArr = [];
-					var groupUserList = datasource;
-
-					for(var i = 0; i < groupUserList.length; i++) {
-
-						if(groupUserList[i].mstype == 0) { //0家长,1管理员,2老师,3学生
-							groupUserList[i].mstypeName = '[家长]';
-						} else if(groupUserList[i].mstype == 1) {
-							groupUserList[i].mstypeName = '[管理员]';
-						} else if(groupUserList[i].mstype == 2) {
-							groupUserList[i].mstypeName = '[老师]';
-						} else {
-							groupUserList[i].mstypeName = '[学生]';
-						}
-
-						var Arrindex = tempUtidArr.indexOf(groupUserList[i].utid);
-						if(Arrindex > -1) {
-							tempUserArr[Arrindex].ugname = tempUserArr[Arrindex].ugname + groupUserList[i].mstypeName;
-						} else {
-							groupUserList[i].ugname = groupUserList[i].ugname + groupUserList[i].mstypeName;
-							tempUtidArr.push(groupUserList[i].utid);
-							tempUserArr.push(groupUserList[i]);
-
-						}
-					}
-					datasource = tempUserArr;
+					console.log(JSON.stringify(datasource));
 					var userIds = [];
 					for(var i = 0; i < datasource.length; i++) {
 						//群用户id数组
@@ -882,11 +858,11 @@
 						userIds.join(',');
 
 					}
+					//					console.log('群用户：'+JSON.stringify(datasource));
 					userIds = arrayDupRemoval(userIds)
 					upString = arrayToStr(userIds)
 					setUserSpaceReadByUser(upString);
 					getAllUserSpacesByUser(upString); //获取多用户空间列表
-					PostUmk(upString);
 
 				} else {
 					mui.toast(data.RspTxt);
@@ -916,17 +892,22 @@
 					//								setUserSpaceReadByUser();
 					totalCnt = data.RspData.TotalCnt;
 					var tempRspData = data.RspData.Data;
+
 					//获取当前回调留言的个人信息，主要是头像、昵称
 					var tempArray = [];
 					//先遍历回调数组，获取
 					for(var item in tempRspData) {
 						//当前循环的model
 						var tempModel0 = tempRspData[item];
+						for(var i = 0; i < datasource.length; i++) {
+							if(tempModel0.PublisherId == datasource[i].utid) {
+								mui.extend(tempModel0, datasource[i])
+							}
+						}
 						//将当前model中id塞到数组
 						tempArray.push(tempModel0.PublisherId);
 						//合并数组,点赞的人
 						tempArray = tempArray.concat(tempModel0.LikeUsers);
-						console.log(JSON.stringify(tempModel0.LikeUsers));
 						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 						//循环当前model中的回复数组
 						for(var item1 in tempModel0.Comments) {
@@ -975,11 +956,11 @@
 											tempModel0.LikeUsers.splice(item2, 1, tempModel);
 										}
 									}
-									//对比id是否一致
-									if(tempModel0.PublisherId == tempModel.utid) {
-										//合并
-										tempModel0 = $.extend(tempModel0, tempModel);
-									}
+									//									//对比id是否一致
+									//									if(tempModel0.PublisherId == tempModel.utid) {
+									//										//合并
+									//										tempModel0 = $.extend(tempModel0, tempModel);
+									//									}
 									//循环当前model中的回复数组
 									for(var item1 in tempModel0.Comments) {
 										//回复中的model
@@ -1011,31 +992,8 @@
 								}
 							}
 						}
-						console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
+						PostUmk(tempArray.join(), tempRspData);
 
-						var table = document.body.querySelector('.mui-table-view');
-						//判断是加载更多1，还是刷新2
-						if(flag == 1) {
-							console.log('上拉加载更多')
-							var tempLength = zonepArray.length;
-							//合并数组
-							zonepArray = zonepArray.concat(tempRspData);
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-							for(var i = tempLength; i < zonepArray.length; i++) {
-								id = i;
-								var data = addData(i);
-								dynamiclistitem.addItem(table, data, id);
-							}
-						} else {
-							tempPage = 1;
-							zonepArray = tempRspData;
-							table.innerHTML = '';
-							for(var i = 0; i < zonepArray.length; i++) {
-								id = i;
-								var data = addData(i);
-								dynamiclistitem.addItem(table, data, id);
-							}
-						}
 					});
 				} else {
 					mui.toast(data.RspTxt);
@@ -1044,25 +1002,54 @@
 			})
 		}
 
-		function PostUmk(upString) {
+		function PostUmk(upString, tempRspData) {
 			//所需参数
-			var upstrings = upString.replace('[', '');
-			upstrings = upstrings.replace(']', '');
 			var postData = {
-				vvl: upstrings //被备注用户ID,utid或utid串
+				vvl: upString //被备注用户ID,utid或utid串
 			};
 			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 			postDataPro_PostUmk(postData, wd, function(data) {
 				wd.close();
 				console.log('获取多用户备注_PostUmk:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 				if(data.RspCode == 0) {
-					for(var j = 0; j < zonepArray.length; j++) {
+					for(var j = 0; j < tempRspData.length; j++) {
 						for(var k = 0; k < data.RspData.length; k++) {
-							if(zonepArray[j].utid == data.RspData[k].butid) {
-								zonepArray[j].ugname = data.RspData[k].bunick;
+							console.log(tempRspData[j].utid + '-------' + data.RspData[k].butid)
+							if(tempRspData[j].utid == data.RspData[k].butid) {
+								tempRspData[j].ugname = data.RspData[k].bunick;
+								console.log(JSON.stringify(tempRspData))
 							}
 						}
 
+					}
+
+				} else if(data.RspCode == 0009) {
+
+				}
+				var table = document.body.querySelector('.mui-table-view');
+				//判断是加载更多1，还是刷新2
+				if(flag == 1) {
+					console.log('上拉加载更多')
+					var tempLength = zonepArray.length;
+					//合并数组
+					zonepArray = zonepArray.concat(tempRspData);
+
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
+					for(var i = tempLength; i < zonepArray.length; i++) {
+						id = i;
+						var data = addData(i);
+						dynamiclistitem.addItem(table, data, id);
+					}
+				} else {
+					tempPage = 1;
+					zonepArray = tempRspData;
+
+					console.log('zoneArray=' + JSON.stringify(zonepArray))
+					table.innerHTML = '';
+					for(var i = 0; i < zonepArray.length; i++) {
+						id = i;
+						var data = addData(i);
+						dynamiclistitem.addItem(table, data, id);
 					}
 				}
 			})
