--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -313,8 +313,10 @@
 								}
 								//对比id是否一致
 								if(tempModel0.PublisherId == tempModel.utid) {
+									console.log('kkkkkkkkkk='+tempModel0.PublisherId)
 									//合并
 									tempModel0 = $.extend(tempModel0, tempModel);
+									console.log(JSON.stringify(tempModel0))
 								}
 								//循环当前model中的回复数组
 								for(var item1 in tempModel0.Comments) {
@@ -376,11 +378,12 @@
 				//[personalImage,personalName,time,contentText]个人头像，姓名，发布时间，动态内容的文字
 				//判断img是否为null，或者空
 				var tempModel = data;
-				tempModel.PublisherImg = updateHeadImg(tempModel.PublisherImg, 2)
+//				tempModel.PublisherImg = updateHeadImg(tempModel.PublisherImg, 2)
 
-				var personalImage = tempModel.PublisherImg;
+				var personalImage;
 				if(!tempModel.PublisherName) {
 					tempModel.PublisherName = tempModel.unick
+					personalImage = tempModel.uimg;
 				}
 				var personalName = tempModel.PublisherName;
 				var time = tempModel.PublishDate;
