--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -48,7 +48,6 @@
 						</a>
 					</li>-->
 					<li class="mui-table-view-divider"></li>
-					
 
 					<li class="mui-table-view-cell" position='4'>
 						<a class="mui-navigate-right">
@@ -95,9 +94,9 @@
 				var curPage = plus.webview.currentWebview();
 				main = curPage.opener();
 				curPage.addEventListener("show", function(e) {
-						mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
-					})
-					//展示个人信息
+					mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
+				})
+				//展示个人信息
 				getInfo();
 				//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
 				//点击title跳转到账号信息界面
@@ -116,14 +115,27 @@
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 
 					console.log('click position:' + this.getAttribute('position'))
-					console.log("系统名称："+plus.os.name);
-					if(plus.os.name == 'Android') {
-						setTimeout(function() {
-							closeMenu();
-						}, 1000);
-					} else {
-						closeMenu();
+					console.log("系统名称：" + plus.os.name);
+					switch(parseInt(this.getAttribute('position'))) {
+						case 0:
+						case 1:
+						case 2:
+						case 3:
+						case 4:
+						case 6:
+						case 7:
+							if(plus.os.name == 'Android') {
+								setTimeout(function() {
+									closeMenu();
+								}, 1000);
+							} else {
+								closeMenu();
+							}
+							break;
+						default:
+							break;
 					}
+
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
 							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
@@ -138,7 +150,7 @@
 							//申请加入群
 						case 2:
 							var recordPage = plus.webview.getWebviewById('apply-record.html')
-							if(recordPage&&recordPage!=null) {
+							if(recordPage && recordPage != null) {
 								recordPage.reload(true);
 							}
 							events.openNewWindow('/html/mine/apply-record.html');
@@ -174,11 +186,11 @@
 				getInfo()
 			})
 			window.addEventListener('newsChanged', function() {
-					getNewsAmount();
-				})
-				/**
-				 * 获取个人信息
-				 */
+				getNewsAmount();
+			})
+			/**
+			 * 获取个人信息
+			 */
 			function getInfo() {
 				info = myStorage.getItem(storageKeyName.PERSONALINFO);
 				console.log('我的界面获取的个人信息：' + JSON.stringify(info))
@@ -216,13 +228,13 @@
 				});
 			}
 			var setAmount = function(data) {
-					var amount = 0;
-					data.forEach(function(cell) {
-						amount += cell.pc;
-					})
-					return amount;
-				}
-				//关闭
+				var amount = 0;
+				data.forEach(function(cell) {
+					amount += cell.pc;
+				})
+				return amount;
+			}
+			//关闭
 			function closeMenu() {
 				mui.fire(main, "menu:close");
 			}
