--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -114,9 +114,10 @@
 			
 			.dynamic-personal-image {
 				/*个人头像圆形*/
+				/*margin-left: -10px;*/
 				border-radius: 50%;
-				width: 50px;
-				height: 50px;
+				width: 40px;
+				height: 40px;
 			}
 			
 			.dynamic-padding-left-10px {
@@ -144,7 +145,7 @@
 			.footer-center {
 				display: inline-block;
 				width: 75%;
-				padding: 5px;
+				padding: 0px;
 				height: 100%;
 			}
 			
