求知回答问题

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -22,7 +22,7 @@
 			<div class="mui-scroll">
 				<p id="askTitle" style="font-size: 14px;margin-top: 12px;word-wrap: break-word;padding: 0 15px;text-align: justify;"></p>
 				<div class="input-content">
-					<textarea id="answerContent" placeholder="添加回答,最多4000字"></textarea>
+					<textarea id="answerContent" class="input-content" placeholder="添加回答,最多4000字"></textarea>
 					<div class="extras-info">
 						<div id="take_pic" class="take_pic file-extras">
 							<a class="mui-icon iconfont icon-xiangji1"></a>
