留言板限制字数

--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -55,6 +55,9 @@
 				if(!tempText || tempText == '') {
 					mui.toast('请输入留言');
 					return;
+				}else if(tempText.length > 300) {
+					mui.toast('不能超过300字');
+					return;
 				} else {
 					tempText = replaceAllBL(tempText);
 				}
