--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -57,6 +57,9 @@ textarea {
 				if(!tempText||tempText=='') {
 					mui.toast('请输入留言');
 					return;
+				}else if(tempText.length > 300) {
+					mui.toast('不能超过300字');
+					return;
 				}else{
 					tempText = replaceAllBL(tempText);
 				}
